--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "dotenv": "^16.4.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
