--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -12,7 +12,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Check Repository Action
         uses: actions/checkout@v2
 
       - name: Install vercel CLI
