--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "vite --host",
     "dev": "vite",
+    "test": "jest --watch",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@testing-library/react": "^16.1.0",
     "dotenv": "^16.4.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -24,16 +26,23 @@
     "sweetalert2": "^11.15.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^6.0.1"
