--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
     "@testing-library/react": "^16.1.0",
     "dotenv": "^16.4.7",
