--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -3,6 +3,7 @@ name: Deploy to Vercel
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
   VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
+  VITE_GOOGLE_CLIENT_ID: ${{  secrets.VITE_GOOGLE_CLIENT_ID }}
 
 on:
   push:
