--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
     "@testing-library/react": "^16.1.0",
+    "@vercel/analytics": "^1.4.1",
     "dotenv": "^16.4.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
