--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^16.1.0",
     "@vercel/analytics": "^1.4.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,6 +25,7 @@
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.0.1",
     "redux-thunk": "^3.1.0",
     "sweetalert2": "^11.15.0"
