--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
     "@testing-library/react": "^16.1.0",
-    "@vercel/analytics": "^1.4.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "moment": "^2.30.1",
